@@ -1,4 +1,14 @@
-2006-04-13  Riccardo Mottola <riccardo@kaffe.org>
+2006-04-15  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/external/classpath/configure.ac:
+	Added CLASSPATH_CONVENIENCE substitution for convenience library LDFLAGS.
+
+	* libraries/javalib/external/classpath/native/fdlibm/Makefile.am,
+	libraries/javalib/external/classpath/native/jni/classpath/Makefile.am:
+	Don't use -module and -version-info for convenience libraries LDFLAGS.
+	Fixes libtool warnings.
+
+2006-04-14  Riccardo Mottola <riccardo@kaffe.org>
 
 	libraries/javalib/awt-implementations/kaffe/Makefile.am:
 	Removed some classes that came from GNU Classpath.
